--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   file_picker: ^5.2.2
   intl: ^0.17.0
   ntp: ^2.0.0
+  lottie: ^2.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -79,8 +80,20 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/ClothIcon.png
+    - assets/random.png
+    - assets/ClosetB.png
+    - assets/ClosetR.png
+    - assets/ClosetW.png
+    - assets/randomP.png
+    - assets/randomR.png
+    - assets/pa1.png
+    - assets/ne1.png
+    - assets/ge1.png
+    - assets/question.json
+    - assets/camera.json
+    - assets/closet.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -94,10 +107,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Gmarket
+      fonts:
+        - asset: assets/GmarketSansTTF/GmarketSansTTFBold.ttf
+    - family: GmarketM
+      fonts:
+        - asset: assets/GmarketSansTTF/GmarketSansTTFMedium.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
