--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
     sdk: flutter
 
   flutter_joystick: ^0.0.2
-  image_picker: ^0.8.5+3
+  image_picker: ^0.8.6
   carousel_slider: ^4.1.1
   custom_radio_grouped_button: ^2.1.2
   http: ^0.13.4
@@ -47,13 +47,14 @@ dependencies:
   email_validator: ^2.1.17
   flutter_swiper: ^1.1.6
   flutter_spinkit: ^5.1.0
-  webview_flutter: ^3.0.4
+  webview_flutter: ^4.0.1
   dio: ^4.0.6
   file_picker: ^5.2.2
   intl: ^0.17.0
   ntp: ^2.0.0
   lottie: ^2.2.0
-
+  flutter_staggered_animations: ^1.1.1
+  animations: ^2.0.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -94,6 +95,9 @@ flutter:
     - assets/question.json
     - assets/camera.json
     - assets/closet.json
+    - assets/first.jpg
+    - assets/second.jpg
+    - assets/third.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
